# flux

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install.sh
cmake/: utils.cmake
examples/: CMakeLists.txt
examples/string-example/: string-example.cpp
examples/vector-example/: CMakeLists.txt  vector-example.cpp
flux-copy/: CMakePresets.json
flux-copy/cmake/: flux-config.cmake.in
flux-copy/examples/string-example/: CMakeLists.txt
flux-copy/include/flux/: export-flux.hpp
flux-copy/source/containers/: string.cpp
flux-copy/tests/: CMakeLists.txt
flux-copy/tests/string-test/: CMakeLists.txt  string-test.cpp
include/flux/containers/: string.hpp  vector.hpp
source/containers/: string.cpp  vector.cpp
tests/string-test/: string-test.cpp
